fix layout issues in spells

--- a/osr_homebrew.css
+++ b/osr_homebrew.css
@@ -1024,7 +1024,7 @@ input.sheet-can-cast-magic:checked ~ div.sheet-show-spellbook
     justify-content: space-between;
 }
 .sheet-spell-name {
-    width: 30%;
+    width: 40%;
     font-weight: bold;
 		text-align: left;
 }
